@@ -13,7 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  *
- * Modifications copyright (C) 2023 ByteChef Inc.
+ * Modifications copyright (C) 2025 ByteChef
  */
 
 package com.bytechef.task.dispatcher.branch;
@@ -28,6 +28,7 @@ import static com.bytechef.task.dispatcher.branch.constant.BranchTaskDispatcherC
 import com.bytechef.atlas.configuration.domain.Task;
 import com.bytechef.atlas.configuration.domain.WorkflowTask;
 import com.bytechef.atlas.coordinator.event.TaskExecutionCompleteEvent;
+import com.bytechef.atlas.coordinator.task.dispatcher.ErrorHandlingTaskDispatcher;
 import com.bytechef.atlas.coordinator.task.dispatcher.TaskDispatcher;
 import com.bytechef.atlas.coordinator.task.dispatcher.TaskDispatcherResolver;
 import com.bytechef.atlas.execution.domain.Context.Classname;
@@ -36,15 +37,14 @@ import com.bytechef.atlas.execution.service.ContextService;
 import com.bytechef.atlas.execution.service.TaskExecutionService;
 import com.bytechef.atlas.file.storage.TaskFileStorage;
 import com.bytechef.commons.util.MapUtils;
-import com.fasterxml.jackson.core.type.TypeReference;
+import com.bytechef.evaluator.Evaluator;
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
-import java.time.LocalDateTime;
-import java.util.Collections;
+import java.time.Instant;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import org.apache.commons.lang3.Validate;
 import org.springframework.context.ApplicationEventPublisher;
+import tools.jackson.core.type.TypeReference;
 
 /**
  * @author Arik Cohen
@@ -52,20 +52,24 @@ import org.springframework.context.ApplicationEventPublisher;
  * @since Jun 3, 2017
  * @see BranchTaskCompletionHandler
  */
-public class BranchTaskDispatcher implements TaskDispatcher<TaskExecution>, TaskDispatcherResolver {
+public class BranchTaskDispatcher extends ErrorHandlingTaskDispatcher implements TaskDispatcherResolver {
 
-    private final ApplicationEventPublisher eventPublisher;
     private final ContextService contextService;
+    private final Evaluator evaluator;
+    private final ApplicationEventPublisher eventPublisher;
     private final TaskDispatcher<? super Task> taskDispatcher;
     private final TaskExecutionService taskExecutionService;
     private final TaskFileStorage taskFileStorage;
 
     @SuppressFBWarnings("EI")
     public BranchTaskDispatcher(
-        ApplicationEventPublisher eventPublisher, ContextService contextService,
+        ContextService contextService, Evaluator evaluator, ApplicationEventPublisher eventPublisher,
         TaskDispatcher<? super Task> taskDispatcher, TaskExecutionService taskExecutionService,
         TaskFileStorage taskFileStorage) {
 
+        super(eventPublisher);
+
+        this.evaluator = evaluator;
         this.contextService = contextService;
         this.eventPublisher = eventPublisher;
         this.taskDispatcher = taskDispatcher;
@@ -74,59 +78,64 @@ public class BranchTaskDispatcher implements TaskDispatcher<TaskExecution>, Task
     }
 
     @Override
-    public void dispatch(TaskExecution taskExecution) {
-        taskExecution.setStartDate(LocalDateTime.now());
+    public void doDispatch(TaskExecution taskExecution) {
+        taskExecution.setStartDate(Instant.now());
         taskExecution.setStatus(TaskExecution.Status.STARTED);
 
         taskExecution = taskExecutionService.update(taskExecution);
 
-        Map<String, ?> selectedCase = resolveCase(taskExecution);
+        Map<String, ?> context = taskFileStorage.readContextValue(
+            contextService.peek(Objects.requireNonNull(taskExecution.getId()), Classname.TASK_EXECUTION));
+
+        Map<String, ?> selectedCase = resolveCase(taskExecution, context);
 
         if (selectedCase.containsKey(TASKS)) {
-            List<WorkflowTask> subWorkflowTasks = MapUtils.getList(
-                selectedCase, TASKS, WorkflowTask.class, Collections.emptyList());
+            List<WorkflowTask> subWorkflowTasks = MapUtils
+                .getList(
+                    selectedCase, TASKS, new TypeReference<Map<String, ?>>() {}, List.of())
+                .stream()
+                .map(WorkflowTask::new)
+                .toList();
 
             if (subWorkflowTasks.isEmpty()) {
-                taskExecution.setStartDate(LocalDateTime.now());
-                taskExecution.setEndDate(LocalDateTime.now());
+                taskExecution.setStartDate(Instant.now());
+                taskExecution.setEndDate(Instant.now());
                 taskExecution.setExecutionTime(0);
 
                 eventPublisher.publishEvent(new TaskExecutionCompleteEvent(taskExecution));
             } else {
-                WorkflowTask subWorkflowTask = subWorkflowTasks.get(0);
+                WorkflowTask subWorkflowTask = subWorkflowTasks.getFirst();
 
                 TaskExecution subTaskExecution = TaskExecution.builder()
                     .jobId(taskExecution.getJobId())
+                    .maxRetries(subWorkflowTask.getMaxRetries())
                     .parentId(taskExecution.getId())
                     .priority(taskExecution.getPriority())
                     .taskNumber(1)
                     .workflowTask(subWorkflowTask)
                     .build();
 
-                Map<String, ?> context = taskFileStorage.readContextValue(
-                    contextService.peek(Validate.notNull(taskExecution.getId(), "id"), Classname.TASK_EXECUTION));
-
-                subTaskExecution.evaluate(context);
+                subTaskExecution.evaluate(context, evaluator);
 
                 subTaskExecution = taskExecutionService.create(subTaskExecution);
 
                 contextService.push(
-                    Validate.notNull(subTaskExecution.getId(), "id"), Classname.TASK_EXECUTION,
+                    Objects.requireNonNull(subTaskExecution.getId()), Classname.TASK_EXECUTION,
                     taskFileStorage.storeContextValue(
-                        Validate.notNull(subTaskExecution.getId(), "id"), Classname.TASK_EXECUTION, context));
+                        Objects.requireNonNull(subTaskExecution.getId()), Classname.TASK_EXECUTION, context));
 
                 taskDispatcher.dispatch(subTaskExecution);
             }
         } else {
-            taskExecution.setStartDate(LocalDateTime.now());
-            taskExecution.setEndDate(LocalDateTime.now());
+            taskExecution.setStartDate(Instant.now());
+            taskExecution.setEndDate(Instant.now());
             taskExecution.setExecutionTime(0);
-            // TODO check, it seems wrong
 
             if (selectedCase.get("value") != null) {
                 taskExecution.setOutput(
                     taskFileStorage.storeTaskExecutionOutput(
-                        Validate.notNull(taskExecution.getId(), "id"), selectedCase.get("value")));
+                        Objects.requireNonNull(taskExecution.getJobId()), Objects.requireNonNull(taskExecution.getId()),
+                        selectedCase.get("value")));
             }
 
             eventPublisher.publishEvent(new TaskExecutionCompleteEvent(taskExecution));
@@ -142,19 +151,21 @@ public class BranchTaskDispatcher implements TaskDispatcher<TaskExecution>, Task
         return null;
     }
 
-    private Map<String, ?> resolveCase(TaskExecution taskExecution) {
+    private Map<String, ?> resolveCase(TaskExecution taskExecution, Map<String, ?> context) {
         Object expression = MapUtils.getRequired(taskExecution.getParameters(), EXPRESSION);
         List<Map<String, Object>> cases = MapUtils.getRequiredList(
             taskExecution.getParameters(), CASES, new TypeReference<>() {});
 
         for (Map<String, Object> oneCase : cases) {
-            Object key = MapUtils.getRequired(oneCase, KEY);
+            Map<String, Object> keyMap = evaluator.evaluate(Map.of(KEY, MapUtils.getRequired(oneCase, KEY)), context);
+
+            Object key = keyMap.get(KEY);
 
             if (key.equals(expression)) {
                 return oneCase;
             }
         }
 
-        return MapUtils.getMap(taskExecution.getParameters(), DEFAULT, Collections.emptyMap());
+        return Map.of(TASKS, MapUtils.get(taskExecution.getParameters(), DEFAULT, new TypeReference<>() {}, List.of()));
     }
 }
